Added User Profile Viewing

--- a/account/index.html
+++ b/account/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
     <header>
-        <div>
-            <img rel="icon" href="/logo.ico" type="image/x-icon">
-            <h1>SPFN</h1>
+        <div style="display: flex;">
+            <h1 style="margin: 0 auto;">SPFN</h1>
+            <h2 style="font-size: 32px; margin: auto; padding: 12px">Account</h2>
         </div>
         <nav>
             <ul class="nav-links">
@@ -19,8 +19,6 @@
     </header>
 
     <main>
-        <h2>Accounts</h2>
-
         <form id="login">
             <h3 class="center">Please log in before viewing account information</h3>
             <div class="form-group">
@@ -38,7 +36,7 @@
         <div id="user-info" class="info" style="display: none;">
             <div id="user-display" class="info-container" style="width: 180px">
                 <h3 id="display-name" style="margin: 2px;">Display Name</h3>
-                <p id="username" style="margin: 2px;">SFID: Username</p>
+                <p id="sfid" style="margin: 2px;">SFID: Username</p>
             </div>
             <div id="user-details" class="info-container", style="flex: 1;">
                 <p class="info-text" id="email"><strong>Email: </strong>name@domain.com</p>
