--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         <p>Splatfestival Network - Restoring Splatfests to Splatoon on the Wii U</p>
     </main>
     <footer>
-        <p class="center">Need assistance? <a href="https://discord.gg/grMSxZf">Join the Discord</a></p>
+        <p class="center">Need assistance? <a href="https://discord.gg/grMSxZf" target="_blank">Join the Discord</a></p>
     </footer>
 </body>
