Improved Website Design and Home Page

--- a/guides/index.html
+++ b/guides/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <head>
     <title>Guides | SPFN</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
+    <script type="text/javascript" src="/js/lang.js"></script>
 </head>
 <body>
     <header>
@@ -12,7 +14,7 @@
         <nav>
             <ul class="nav-links">
                 <a href="/"><button class="header-button">Home</button></a>
-                <a href="/guides"><button class="header-button">Guides</button></a>
+                <a href="/guides"><button class="header-button active">Guides</button></a>
                 <a href="/account"><button class="header-button">Account</button></a>
             </ul>
         </nav>
@@ -129,7 +131,7 @@
             </div>
         </div>
 
-        <script type="text/javascript" src="guides.js"></script>
+        <script type="text/javascript" src="/js/guides.js"></script>
     </main>
 
     <footer>
