--- a/account/index.html
+++ b/account/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <head>
     <title>Account | SPFN</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
+    <script type="text/javascript" src="/js/lang.js"></script>
 </head>
 <body>
     <header>
@@ -13,7 +15,7 @@
             <ul class="nav-links">
                 <a href="/"><button class="header-button">Home</button></a>
                 <a href="/guides"><button class="header-button">Guides</button></a>
-                <a href="/account"><button class="header-button">Account</button></a>
+                <a href="/account"><button class="header-button active">Account</button></a>
             </ul>
         </nav>
     </header>
@@ -30,7 +32,7 @@
         <form id="login" style="display: none;">
             <h3 class="center">Please log in before viewing account information</h3>
             <div class="form-group">
-                <label for="username">SFID:</label>
+                <label for="username">SFID / Username:</label>
                 <input type="text" id="username" name="username" required />
             </div>
             <div class="form-group">
@@ -42,12 +44,13 @@
         </form>
 
         <div id="user-info" class="info" style="display: none;">
-            <div id="user-display" class="info-container" style="width: 180px">
+            <div id="user-display" class="info-container" style="width: 180px; align-items: center;">
+                <img src="/res/img/mii-placeholder.png" style="width: 100%">
                 <h3 id="display-name" style="margin: 2px;">Display Name</h3>
                 <p id="sfid" style="margin: 2px;">SFID: Username</p>
-                <button style="font-size: 24px; width: 180px;" onclick="logOut()">Log Out</button>
+                <button style="font-size: 24px; width: 160px;" onclick="logOut()">Log Out</button>
             </div>
-            <div id="user-details" class="info-container", style="flex: 1;">
+            <div id="user-details" class="info-container" style="flex: 1;">
                 <p class="info-text" id="email"><strong>Email: </strong>name@domain.com</p>
                 <p class="info-text" id="dob"><strong>Date of Birth: </strong>dd/mm/yyyy</p>
                 <hr style="margin: 1rem 0; border: none; height: 1px; background: #aaa;">
@@ -58,7 +61,7 @@
             </div>
         </div>
 
-        <script type="text/javascript" src="accounts.js"></script>
+        <script type="text/javascript" src="/js/accounts.js"></script>
     </main>
 
     <footer>
