--- a/account/index.html
+++ b/account/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
     <header>
@@ -63,7 +63,7 @@
             </div>
         </div>
 
-        <script type="text/javascript" src="/js/accounts.js"></script>
+        <script type="text/javascript" src="/scripts/accounts.js"></script>
     </main>
 
     <footer>
